syntax = "proto3";
option go_package = ".;pb";

//作者
message DB_AuthorData {
  uint32 AuthoIrd = 1;                        //tags:{bson:"_id"}作者id
  string PhonOrEmail = 2;
  string Password = 3;
  string NickName = 4;
  string HeadUrl = 5;
  repeated uint32 ArticleIds = 6;             //文章列表
}

message DB_ArticleData {
    uint32 Id = 1;                              //tags:{bson:"_id"}文章id
    string Title = 2;                           //文章标题
    string ShortContent = 3;                    //短内容
    string Content = 4;                         //文章内容
    repeated string Images = 5;                 //文章图片
    int64 CreationTime = 6;                     //传作时间
    uint32 AuthorId = 7;                        //作者id
    string AuthorName = 8;                      //作者id
    string AuthorAvatar = 9;                    //作者头像
    uint32 GreatNum = 10;                       //点赞数
    uint32 Messagenum =11;                      //消息数
}