syntax = "proto3";
option go_package = ".;pb";

message CreateArticleReq {
  uint32 ArticleId = 1;
  string Title = 2;
  string ShortContent = 3;
  string Content = 4;
  repeated string Images = 5;
}

message ReleaseArticleReq {
  uint32 ArticleId = 1;
  string Title = 2;
  string ShortContent = 3;
  string Content = 4;
  repeated string Images = 5;
}

message DeleteArticleReq {
  uint32 ArticleId = 1;
}

message GetAuthoIrdArticlesReq{
}

message GetArticleReq{
  uint32 ArticleId = 1;
}

message GetLastArticlesReq {
  int64 Start = 1;
  int64 Num = 2;
}
